--- a/package.json
+++ b/package.json
@@ -2,40 +2,54 @@
   "name": "comento-ui",
   "version": "0.1.0",
   "private": true,
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/comento/comento-ui.git"
+  },
+  "homepage": "https://github.com/comento/comento-ui#readme",
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "vue-cli-service build --target lib --name comento-ui src/main.js",
+    "lint": "vue-cli-service lint",
+    "release": "shipjs prepare",
+    "storybook": "start-storybook -p 6006 -c .storybook"
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "v-tooltip": "^2.0.3",
+    "vue-svg-loader": "^0.16.0"
   },
   "devDependencies": {
+    "@storybook/addon-controls": "^6.0.22",
+    "@storybook/addon-docs": "^6.0.22",
+    "@storybook/vue": "^6.0.21",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
     "eslint": "^6.7.2",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-html": "^6.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.2",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "^1.26.11",
+    "sass-loader": "^10.0.2",
+    "shipjs": "0.21.1",
+    "vue-template-compiler": "^2.6.11",
+    "prettier": "^2.1.2"
   },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
-  },
+  "files": [
+    "dist/*",
+    "plugins/*"
+  ],
   "browserslist": [
     "> 1%",
     "last 2 versions",
