--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "comento-ui",
   "version": "0.1.0-rc.3",
   "license": "MIT",
+  "main": "dist/comento-ui.common.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/comento/comento-ui.git"
