--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "comento-ui",
-  "version": "0.1.0-alpha.8",
+  "version": "0.1.0-rc.6",
   "license": "MIT",
   "main": "dist/comento-ui.common.js",
   "repository": {
