[fix] vue build test command

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -7,5 +7,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
+      - run: yarn
       - name: Build Test
-        run: yarn run build
+      - run: yarn run build
