--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "storybook": "start-storybook -p 6006 -c .storybook",
     "build-storybook": "build-storybook",
     "chromatic": "npx chromatic --project-token",
-    "deploy-storybook": "storybook-to-ghpages"
+    "deploy-storybook": "storybook-to-ghpages",
+    "test": "jest",
+    "test:watchAll": "jest --watchAll",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@storybook/storybook-deployer": "^2.8.7",
@@ -33,6 +36,7 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "@vue/test-utils": "^1.1.0",
     "autoprefixer": "^10.0.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
@@ -47,6 +51,8 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^6.2.2",
     "husky": "^4.3.0",
+    "jest": "^26.6.1",
+    "jest-serializer-vue": "^2.0.2",
     "lint-staged": "^10.4.2",
     "node-sass": "^4.12.0",
     "postcss": "^8.1.4",
@@ -55,6 +61,7 @@
     "sass": "^1.26.11",
     "sass-loader": "^10.0.2",
     "shipjs": "0.21.1",
+    "vue-jest": "^3.0.7",
     "vue-template-compiler": "^2.6.11"
   },
   "files": [
