--- a/package.json
+++ b/package.json
@@ -69,12 +69,10 @@
     "plugins/*"
   ],
   "browserslist": [
-    "defaults",
-    "not ie < 11",
-    "last 2 versions",
-    "> 1%",
-    "iOS 7",
-    "last 3 iOS versions"
+    "last 2 version",
+    "> 5% in KR",
+    "IE >= 11",
+    "iOS >= 11"
   ],
   "storybook-deployer": {
     "gitUsername": "donghoon-song",
