[fix] swiper 5.x버전으로 다운받아야함

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "@storybook/storybook-deployer": "^2.8.7",
     "core-js": "^3.6.5",
-    "swiper": "^6.4.1",
+    "swiper": "5.x",
     "v-tooltip": "^2.0.3",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
