[change] chromatic github action master에도 추가

--- a/.github/workflows/chromatic-develop.yml
+++ b/.github/workflows/chromatic-develop.yml
@@ -1,8 +1,9 @@
-name: 'Chromatic on develop branch'
+name: 'Chromatic on merge'
 on:
   push:
     branches:
       - develop
+      - master
 
 jobs:
   test:
