--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "v-tooltip": "^2.0.3",
     "vue": "^2.6.11",
     "vue-awesome-swiper": "^4.1.1",
-    "vue-svg-loader": "^0.16.0"
+    "vue-svg-loader": "^0.16.0",
+    "vue2-datepicker": "^3.8.2"
   },
   "devDependencies": {
     "@storybook/addon-docs": "^6.0.22",
