--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "serve": "vue-cli-service serve",
     "bundle": "vue-cli-service build --target lib --name comento-ui src/main.js",
     "copy": "cp -R src/assets/style/base/color.scss dist && cp -R src/components/elements/core/colors/index.js dist/color.js",
-    "build": "yarn bundle && yarn copy",
-    "lint": "vue-cli-service lint",
     "web-types": "vue-docgen-web-types",
-    "release": "yarn web-types && shipjs prepare",
+    "build": "yarn bundle && yarn copy && yarn web-types",
+    "lint": "vue-cli-service lint",
+    "release": "shipjs prepare",
     "storybook": "start-storybook -p 6006 -c .storybook",
     "build-storybook": "build-storybook",
     "chromatic": "npx chromatic --project-token",
@@ -89,5 +89,5 @@
       "pre-commit": "lint-staged"
     }
   },
-  "web-types": "web-types.json"
+  "web-types": "dist/web-types.json"
 }
