--- a/.github/workflows/shipjs-trigger.yml
+++ b/.github/workflows/shipjs-trigger.yml
@@ -16,6 +16,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           registry-url: "https://registry.npmjs.org"
+          node-version: '16.13.0'
       - run: |
           if [ -f "yarn.lock" ]; then
             yarn install
