--- a/.github/workflows/storybook-deployer.yml
+++ b/.github/workflows/storybook-deployer.yml
@@ -15,6 +15,7 @@ jobs:
       - uses: actions/setup-node@v1
         with:
           registry-url: "https://registry.npmjs.org"
+          node-version: '14.0.0'
       - run: |
           if [ -f "yarn.lock" ]; then
             yarn install
