--- a/.github/workflows/chromatic-develop.yml
+++ b/.github/workflows/chromatic-develop.yml
@@ -10,6 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
+      - uses: actions/setup-node@v1
+        with:
+          registry-url: "https://registry.npmjs.org"
+          node-version: '16.13.0'
       - run: yarn
       - uses: chromaui/action@v1
         with:
