--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test:coverage": "jest --coverage"
   },
   "dependencies": {
-    "@storybook/storybook-deployer": "^2.8.7",
+    "@storybook/storybook-deployer": "^2.8.10",
     "core-js": "^3.6.5",
     "swiper": "5.x",
     "v-tooltip": "^2.0.3",
@@ -35,9 +35,10 @@
     "vue2-datepicker": "^3.8.2"
   },
   "devDependencies": {
-    "@storybook/addon-docs": "^6.0.22",
-    "@storybook/addon-viewport": "^6.0.26",
-    "@storybook/vue": "^6.0.21",
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.5",
+    "@storybook/addon-docs": "^6.4.9",
+    "@storybook/addon-viewport": "^6.4.9",
+    "@storybook/vue": "^6.4.9",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
@@ -54,6 +55,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-storybook": "^0.5.5",
     "eslint-plugin-vue": "^6.2.2",
     "husky": "^4.3.0",
     "jest": "^26.6.1",
