--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @comento @yooseongsil @hananumber1 @donghoon-song @Heewookji
+* @comento @yooseongsil @hananumber1 @donghoon-song @Heewookji @mong-byte @LuiGee3471
