--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "copy": "yarn copy-color && yarn copy-fonts && yarn copy-mixins",
     "copy-color": "cp -R src/assets/style/base/color.scss dist && cp -R src/utils/constants/color.js dist/color.js",
     "copy-fonts": "cp -R src/assets/style/base/fonts.scss dist",
-    "copy-mixins": "cp -R src/assets/style/base/mixins.scss dist",
+    "copy-mixins": "cp -R src/assets/style/base/mixins.scss dist && cp -R src/assets/style/base/flexbox.scss dist && cp -R src/assets/style/base/functions.scss dist",
     "web-types": "vue-docgen-web-types",
     "build": "yarn bundle && yarn copy && yarn web-types",
     "lint": "vue-cli-service lint",
