chore: code owner 변경

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @comento @yooseongsil @hananumber1 @donghoon-song @Heewookji @mong-byte @LuiGee3471
+* @comento @yooseongsil @hananumber1 @donghoon-song @mong-byte @LuiGeeDev
