--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   },
   "homepage": "https://github.com/comento/comento-ui",
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "vite-dev": "vite",
+    "vite-build": "vite build",
+    "vite-lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
+    "serve": "vite preview",
     "bundle": "vue-cli-service build --target lib --name comento-ui src/main.js",
     "copy": "yarn copy-color && yarn copy-fonts && yarn copy-mixins",
     "copy-color": "cp -R src/assets/style/base/color.scss dist && cp -R src/utils/constants/color.js dist/color.js",
@@ -31,29 +34,28 @@
   },
   "dependencies": {
     "@storybook/storybook-deployer": "^2.8.7",
-    "core-js": "^3.6.5",
+    "@vitejs/plugin-vue": "^1.6.1",
     "swiper": "5.x",
     "v-tooltip": "^2.0.3",
-    "vue": "^2.6.11",
+    "vite": "^2.5.4",
+    "vite-plugin-vue2": "1.9.0",
+    "vue": "2.7",
     "vue-awesome-swiper": "^4.1.1",
     "vue-linkify": "^1.0.1",
     "vue-pagination-2": "^3.0.91",
     "vue-svg-loader": "^0.16.0",
+    "vue-template-compiler": "^2.6.11",
     "vue2-datepicker": "^3.8.2"
   },
   "devDependencies": {
     "@storybook/addon-docs": "^6.0.22",
     "@storybook/addon-viewport": "^6.0.26",
     "@storybook/vue": "^6.0.21",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
     "@vue/test-utils": "^1.1.0",
     "autoprefixer": "^10.0.1",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "chromatic": "^5.2.0",
-    "eslint": "^6.7.2",
+    "eslint": "8",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-html": "^6.1.0",
     "eslint-plugin-import": "^2.20.2",
@@ -61,7 +63,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-vue": "^8.7.1",
     "husky": "^4.3.0",
     "jest": "^26.6.1",
     "jest-serializer-vue": "^2.0.2",
@@ -70,13 +72,11 @@
     "postcss-loader": "^4.0.4",
     "prettier": "^2.1.2",
     "sass": "^1.57.1",
-    "sass-loader": "^10.1.1",
     "shipjs": "0.21.1",
     "vue-docgen-web-types": "^0.1.7",
     "vue-intellisense": "^1.0.1",
     "vue-jest": "^3.0.7",
-    "vue-styleguidist": "^4.41.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-styleguidist": "^4.41.2"
   },
   "files": [
     "dist/*",
@@ -89,7 +89,7 @@
     "iOS >= 11"
   ],
   "lint-staged": {
-    "*.{js,vue}": "vue-cli-service lint"
+    "*.{js,vue}": "eslint --ext .js,.vue --ignore-path .gitignore --fix src"
   },
   "husky": {
     "hooks": {
