--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
   "name": "comento-ui",
-  "version": "1.1.12",
+  "version": "1.1.10",
   "license": "MIT",
-  "main": "dist/comento-ui.common.js",
+  "main": "./dist/comento-ui.umd.js",
+  "module": "./dist/comento-ui.es.js",
+  "files": [
+    "dist"
+  ],
+  "exports": {
+    ".": {
+      "import": "./dist/comento-ui.es.js",
+      "require": "./dist/comento-ui.umd.js"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/comento/comento-ui.git"
@@ -10,7 +20,7 @@
   "homepage": "https://github.com/comento/comento-ui",
   "scripts": {
     "vite-dev": "vite",
-    "vite-build": "vite build",
+    "vite-build": "vite build && yarn copy",
     "vite-lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
     "serve": "vite preview",
     "bundle": "vue-cli-service build --target lib --name comento-ui src/main.js",
@@ -77,10 +87,6 @@
     "vue-jest": "^3.0.7",
     "vue-styleguidist": "^4.41.2"
   },
-  "files": [
-    "dist/*",
-    "src/plugins/*"
-  ],
   "browserslist": [
     "last 2 version",
     "> 5% in KR",
