--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "build": "yarn bundle && yarn copy && yarn web-types && yarn make-prop-tags",
     "lint": "vue-cli-service lint",
     "release": "shipjs prepare",
-    "storybook": "start-storybook -p 6006 -c .storybook",
+    "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "chromatic": "npx chromatic --project-token",
     "deploy-storybook": "storybook-to-ghpages",
@@ -43,26 +43,35 @@
   },
   "dependencies": {
     "@storybook/storybook-deployer": "^2.8.7",
-    "@vitejs/plugin-vue": "^1.6.1",
+    "@vitejs/plugin-vue": "^2.3.3",
     "swiper": "5.x",
     "v-tooltip": "^2.0.3",
-    "vite": "^2.0.3",
+    "vite": "^3.2.5",
+    "vite-plugin-mdx": "^3.5.11",
     "vite-plugin-vue2": "^1.9.0",
     "vue": "2.7",
     "vue-awesome-swiper": "^4.1.1",
     "vue-linkify": "^1.0.1",
     "vue-pagination-2": "^3.0.91",
-    "vue-svg-loader": "^0.16.0",
     "vue-template-compiler": "^2.6.11",
     "vue2-datepicker": "^3.8.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-docs": "^6.0.22",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-interactions": "^6.5.16",
+    "@storybook/addon-links": "^6.5.16",
     "@storybook/addon-viewport": "^6.0.26",
-    "@storybook/vue": "^6.0.21",
+    "@storybook/builder-vite": "^0.4.0",
+    "@storybook/mdx2-csf": "^0.0.4",
+    "@storybook/testing-library": "^0.0.13",
+    "@storybook/vue": "^6.5.16",
+    "@vitejs/plugin-vue2": "^2.2.0",
     "@vue/test-utils": "^1.1.0",
     "autoprefixer": "^10.0.1",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.3.0",
     "chromatic": "^5.2.0",
     "eslint": "8",
     "eslint-config-prettier": "^6.11.0",
@@ -72,19 +81,20 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
+    "eslint-plugin-storybook": "^0.6.10",
     "eslint-plugin-vue": "^8.7.1",
     "husky": "^4.3.0",
     "jest": "^26.6.1",
     "jest-serializer-vue": "^2.0.2",
     "lint-staged": "^10.4.2",
     "postcss": "^8.4.14",
-    "postcss-loader": "^4.0.4",
     "prettier": "^2.1.2",
     "sass": "^1.57.1",
     "shipjs": "0.21.1",
     "vue-docgen-web-types": "^0.1.7",
     "vue-intellisense": "^1.0.1",
     "vue-jest": "^3.0.7",
+    "vue-loader": "^15.10.1",
     "vue-styleguidist": "^4.41.2"
   },
   "browserslist": [
