--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "comento-ui",
-  "version": "1.1.10",
+  "version": "1.1.10-alpha.2",
   "license": "MIT",
   "main": "dist/comento-ui.common.js",
   "repository": {
