--- a/.github/workflows/shipjs-trigger.yml
+++ b/.github/workflows/shipjs-trigger.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          ref: develop-alpha
+          ref: master
       - uses: actions/setup-node@v2
         with:
           registry-url: "https://registry.npmjs.org"
