--- a/package.json
+++ b/package.json
@@ -30,52 +30,53 @@
   },
   "dependencies": {
     "@storybook/storybook-deployer": "^2.8.7",
+    "@vue/compat": "^3.3.4",
     "core-js": "^3.6.5",
     "swiper": "5.x",
     "v-tooltip": "^2.0.3",
-    "vue": "^2.6.11",
+    "vue": "^3.3.4",
     "vue-awesome-swiper": "^4.1.1",
     "vue-linkify": "^1.0.1",
     "vue-pagination-2": "^3.0.91",
-    "vue-svg-loader": "^0.16.0",
+    "vue-svg-loader": "^0.17.0-beta.2",
     "vue2-datepicker": "^3.8.2"
   },
   "devDependencies": {
     "@storybook/addon-docs": "^6.0.22",
     "@storybook/addon-viewport": "^6.0.26",
     "@storybook/vue": "^6.0.21",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-plugin-babel": "~5.0.0",
+    "@vue/cli-plugin-eslint": "~5.0.0",
+    "@vue/cli-service": "^5.0.8",
+    "@vue/compiler-sfc": "^3.3.4",
     "@vue/test-utils": "^1.1.0",
     "autoprefixer": "^10.0.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "chromatic": "^5.2.0",
-    "eslint": "^6.7.2",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "8.3.0",
     "eslint-plugin-html": "^6.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.0",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-vue": "8.0.3",
     "husky": "^4.3.0",
     "jest": "^26.6.1",
     "jest-serializer-vue": "^2.0.2",
     "lint-staged": "^10.4.2",
     "postcss": "^8.4.14",
     "postcss-loader": "^4.0.4",
-    "prettier": "^2.1.2",
+    "prettier": "2.4.1",
     "sass": "^1.57.1",
-    "sass-loader": "^10.1.1",
+    "sass-loader": "12.0.0",
     "shipjs": "0.21.1",
     "vue-docgen-web-types": "^0.1.7",
     "vue-intellisense": "^1.0.1",
     "vue-jest": "^3.0.7",
-    "vue-styleguidist": "^4.41.2",
-    "vue-template-compiler": "^2.6.11"
+    "vue-styleguidist": "^4.41.2"
   },
   "files": [
     "dist/*",
