chore: OpenSSL unsupported 오류 수정

--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -11,6 +11,7 @@ jobs:
         with:
           registry-url: "https://registry.npmjs.org"
           node-version: '19.9.0'
+      - run: export NODE_OPTIONS=--openssl-legacy-provider
       - run: yarn
       - uses: chromaui/action@v1
         with:
