--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "copy-fonts": "cp -R src/assets/style/base/fonts.scss dist",
     "copy-mixins": "cp -R src/assets/style/base/mixins.scss dist && cp -R src/assets/style/base/flexbox.scss dist && cp -R src/assets/style/base/functions.scss dist",
     "web-types": "vue-docgen-web-types",
-    "build": "yarn bundle && yarn copy && yarn web-types",
+    "build": "export NODE_OPTIONS=--openssl-legacy-provider && yarn bundle && yarn copy && yarn web-types",
     "lint": "vue-cli-service lint",
     "release": "shipjs prepare",
-    "storybook": "start-storybook -p 6006 -c .storybook",
+    "storybook": "export NODE_OPTIONS=--openssl-legacy-provider && start-storybook -p 6006 -c .storybook",
     "build-storybook": "build-storybook",
-    "chromatic": "npx chromatic --project-token",
+    "chromatic": "export NODE_OPTIONS=--openssl-legacy-provider && npx chromatic --project-token",
     "deploy-storybook": "storybook-to-ghpages",
     "test": "jest",
     "test:watchAll": "jest --watchAll",
