--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "copy-fonts": "cp -R src/assets/style/base/fonts.scss dist",
     "copy-mixins": "cp -R src/assets/style/base/mixins.scss dist && cp -R src/assets/style/base/flexbox.scss dist && cp -R src/assets/style/base/functions.scss dist",
     "web-types": "vue-docgen-web-types",
-    "build": "yarn bundle && yarn copy && yarn web-types",
+    "build": "yarn vite-build && yarn copy && yarn web-types",
     "lint": "vue-cli-service lint",
     "release": "shipjs prepare",
     "storybook": "start-storybook -p 6006 -c .storybook",
