--- a/.github/workflows/shipjs-beta-trigger.yml
+++ b/.github/workflows/shipjs-beta-trigger.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-          ref: migrate-to-vite
+          ref: feature/migrate-to-vite
       - uses: actions/setup-node@v2
         with:
           registry-url: "https://registry.npmjs.org"
