chore: exports field에 css파일 추가
Webpack5이상, vite에서는 package.json의 exports field에 명시된 파일만 import할 수 있어서 대응

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     ".": {
       "import": "./dist/comento-ui.es.js",
       "require": "./dist/comento-ui.umd.js"
-    }
+    },
+    "./comento-ui.css": "./dist/comento-ui.css"
   },
   "repository": {
     "type": "git",
