fix: vite storybook 아무것도 안 뜨는 이슈 해결
@storybook/client-api가 storybook-builder-vite-vue2에서 필요한데 설치되지 않아서 일단 깔았음. 그런데 storybook-builder-vite-vue2 자체에서 깔아야 하는 dependency이기 때문에 원인을 알아봐야 함

--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
   "devDependencies": {
     "@storybook/addon-docs": "^6.0.22",
     "@storybook/addon-viewport": "^6.0.26",
+    "@storybook/client-api": "^7.6.17",
+    "@storybook/vue": "^6.5.0-beta.1",
     "@vue/test-utils": "^1.1.0",
     "autoprefixer": "^10.0.1",
     "babel-loader": "^8.1.0",
@@ -82,13 +84,11 @@
     "prettier": "^2.1.2",
     "sass": "^1.57.1",
     "shipjs": "0.21.1",
+    "storybook-builder-vite-vue2": "^0.1.32",
     "vue-docgen-web-types": "^0.1.7",
     "vue-intellisense": "^1.0.1",
     "vue-jest": "^3.0.7",
-    "vue-styleguidist": "^4.41.2",
-    "storybook-builder-vite-vue2": "^0.1.32",
-    "@storybook/vue": "^6.5.0-beta.1",
-    "vue-loader": "^17.4.2"
+    "vue-styleguidist": "^4.41.2"
   },
   "browserslist": [
     "last 2 version",
