--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "vue2-datepicker": "^3.8.2"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.24.1",
+    "@babel/plugin-proposal-export-default-from": "^7.24.1",
     "@storybook/addon-docs": "^6.0.22",
     "@storybook/addon-viewport": "^6.0.26",
     "@storybook/client-api": "^7.6.17",
