--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@storybook/storybook-deployer": "^2.8.7",
     "core-js": "^3.6.5",
+    "pretendard": "^1.3.9",
     "swiper": "5.x",
     "v-tooltip": "^2.0.3",
     "vue": "^2.6.11",
