chore: generate-index 스크립트 추가

--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "bundle": "vue-cli-service build --target lib --name comento-ui src/main.js",
+    "generate-index": "node scripts/generate-component-index.js",
     "copy": "yarn copy-color && yarn copy-fonts && yarn copy-mixins",
     "copy-color": "cp -R src/assets/style/base/color.scss dist && cp -R src/utils/constants/color.js dist/color.js",
     "copy-fonts": "cp -R src/assets/style/base/fonts.scss dist",
     "copy-mixins": "cp -R src/assets/style/base/mixins.scss dist && cp -R src/assets/style/base/flexbox.scss dist && cp -R src/assets/style/base/functions.scss dist",
     "web-types": "vue-docgen-web-types",
-    "build": "yarn bundle && yarn copy && yarn web-types",
+    "build": "yarn generate-index && yarn bundle && yarn copy && yarn web-types",
     "lint": "vue-cli-service lint",
     "release": "shipjs prepare",
     "storybook": "start-storybook -p 6006 -c .storybook",
