--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@storybook/storybook-deployer": "^2.8.7",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "core-js": "^3.6.5",
     "swiper": "5.x",
     "v-tooltip": "^2.0.3",
